fixing problems with visibility

--- a/Project1/CSS/styles.css
+++ b/Project1/CSS/styles.css
@@ -107,7 +107,7 @@ h2, h3, h4{
     color: #000;
     border-radius: 1.563em;
     border: 0.313em solid #000;
-    width: 88%;
+    width: 90%;
     padding: 0.938em;
     font-family: arial, Helvetica, sans-serif;
     margin: 2.188em  auto auto;
